feat: fine impostazione <nav>

--- a/index.html
+++ b/index.html
@@ -6,11 +6,54 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Boolando</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&family=Roboto:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+  <header>
+    <nav>
+      <div class="nav-inner centered flex-box">
+        <div class="categories flex-box">
+          <ul class="flex-box">
+            <li class="flex-box"><a href="http://"></a>Donna</li>
+            <li class="flex-box"><a href="http://"></a>Uomo</li>
+            <li class="flex-box"><a href="http://"></a>Bambini</li>
+          </ul>
 
+        </div>
+        <div class="logo flex-box">
+          <img id="boolean-logo" src="img/boolean-logo.png" alt="">
+
+        </div>
+        <div class="links flex-box">
+          <ul class="flex-box">
+            <li class="flex-box"><a href="http://"><img src="img/omino.png" alt=""></a></li>
+            <li class="flex-box"><a href="http://"><img src="img/cuoricino.png" alt=""></a></li>
+            <li class="flex-box"><a href="http://"><img src="img/borsa.png" alt=""></a></li>
+          </ul>
+
+
+        </div>
+
+      </div>
+    </nav>
+
+  </header>
+  <main>
+    <div class="centered">
+
+    </div>
+  </main>
+  <footer>
+    <div class="centered">
+
+    </div>
+  </footer>
 </body>
 
 </html>
