feat: aggiunta prima carta al main

--- a/index.html
+++ b/index.html
@@ -36,16 +36,41 @@
             <li class="flex-box"><a href="http://"><img src="img/cuoricino.png" alt=""></a></li>
             <li class="flex-box"><a href="http://"><img src="img/borsa.png" alt=""></a></li>
           </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div class="main-inner centered flex-box">
+      <div class="main-inner-row flexbox">
+        <div class="img-card-box flexbox">
+          <div class="immagine">
+            <img src="img/1.webp" alt="">
+            <div class="sconto flex-box">
+              -50%
+
+            </div>
+            <div class="sostenibile flex-box">
+              Sostenibilità
+
+            </div>
+            <div class="cuore flex-box">
+              &hearts;
+            </div>
+          </div>
+          <div class="descrizione">
+            <p>Levi's</p>
+            <p><strong>RELAXED FIT TEE UNISEX</strong></p>
+            <p><span class="red">14,99 €</span> <span class="striked">29,99 €</span> </p>
+
+          </div>
+
+
+
 
 
         </div>
-
       </div>
-    </nav>
-
-  </header>
-  <main>
-    <div class="centered">
 
     </div>
   </main>
