feat: aggiunta altre carte, <main> terminato

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   </header>
   <main>
     <div class="main-inner centered flex-box">
-      <div class="main-inner-row flexbox">
-        <div class="img-card-box flexbox">
+      <div class="main-inner-row flex-box">
+        <div class="img-card-box flex-box">
           <div class="immagine">
             <img src="img/1.webp" alt="">
             <div class="sconto flex-box">
@@ -64,14 +64,121 @@
             <p><span class="red">14,99 €</span> <span class="striked">29,99 €</span> </p>
 
           </div>
+        </div>
+        <div class="img-card-box flex-box">
+          <div class="immagine">
+            <img src="img/2.webp" alt="">
+            <div class="sconto flex-box">
+              -30%
 
+            </div>
+            <!-- <div class="sostenibile flex-box">
+              Sostenibilità
 
+            </div> -->
+            <div class="cuore flex-box">
+              &hearts;
+            </div>
+          </div>
+          <div class="descrizione">
+            <p>Guess</p>
+            <p><strong>ROSES TEE</strong></p>
+            <p><span class="red">20,99 €</span> <span class="striked">29,99 €</span> </p>
 
+          </div>
+        </div>
+        <div class="img-card-box flex-box">
+          <div class="immagine">
+            <img src="img/3.webp" alt="">
+            <div class="sconto flex-box">
+              -30%
 
+            </div>
+            <!-- <div class="sostenibile flex-box">
+              Sostenibilità
 
+            </div> -->
+            <div class="cuore flex-box">
+              &hearts;
+            </div>
+          </div>
+          <div class="descrizione">
+            <p>Come Zucchero Filato</p>
+            <p><strong>VOGLIA DI COLORI PASTELLO</strong></p>
+            <p><span class="red">129,99 €</span> <span class="striked">184,99 €</span> </p>
+
+          </div>
         </div>
       </div>
+      <!-- SECONDA RIGA DI BOXES -->
+      <div class="main-inner-row flex-box">
+        <div class="img-card-box flex-box">
+          <div class="immagine">
+            <img src="img/4.webp" alt="">
+            <div class="sconto flex-box">
+              -50%
 
+            </div>
+            <div class="sostenibile flex-box">
+              Sostenibilità
+
+            </div>
+            <div class="cuore flex-box">
+              &hearts;
+            </div>
+          </div>
+          <div class="descrizione">
+            <p>Levi's</p>
+            <p><strong>TEE UNISEX</strong></p>
+            <p><span class="red">14,99 €</span> <span class="striked">29,99 €</span> </p>
+
+          </div>
+        </div>
+        <div class="img-card-box flex-box">
+          <div class="immagine">
+            <img src="img/5.webp" alt="">
+            <!-- <div class="sconto flex-box">
+              -30%
+
+            </div>
+            <div class="sostenibile flex-box">
+              Sostenibilità
+
+            </div> -->
+            <div class="cuore flex-box">
+              &hearts;
+            </div>
+          </div>
+          <div class="descrizione">
+            <p>Maya Deluxe</p>
+            <p><strong>STRIPE BODICE</strong></p>
+            <p><span class="red">99,99 €</span></p>
+
+          </div>
+        </div>
+        <div class="img-card-box flex-box">
+          <div class="immagine">
+            <img src="img/6.webp" alt="">
+            <!-- <div class="sconto flex-box">
+              -50%
+
+            </div> -->
+            <div id="last" class="sostenibile flex-box">
+              Sostenibilità
+
+            </div>
+            <div class="cuore flex-box">
+              &hearts;
+            </div>
+          </div>
+          <div class="descrizione">
+            <p>Esprit</p>
+            <p><strong>MAGLIONE - BLACK</strong></p>
+            <p><span class="red">129,99 €</span> <span class="striked">184,99 €</span> </p>
+
+          </div>
+        </div>
+      </div>
     </div>
   </main>
   <footer>
