feat: footer concluso

--- a/index.html
+++ b/index.html
@@ -182,8 +182,23 @@
     </div>
   </main>
   <footer>
-    <div class="centered">
+    <div class="footer-inner centered flex-box">
+      <div class="company-details flex-box">
+        <div>
+          <a href="http://"> <strong>Boolando s.r.l.</strong></a>
+        </div>
+        <div>
+          <a href="http://"> Informazioni legali</a>
+          <a href="http://">Informativa sulla privacy</a>
+          <a href="http://">Diritto di recesso</a>
+        </div>
 
+
+      </div>
+      <div class="social-media flex-box">
+        Trovaci anche su:
+
+      </div>
     </div>
   </footer>
 </body>
