feat: completamento bonus

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <div class="nav-inner centered flex-box">
         <div class="categories flex-box">
           <ul class="flex-box">
-            <li class="flex-box"><a href="http://"></a>Donna</li>
-            <li class="flex-box"><a href="http://"></a>Uomo</li>
-            <li class="flex-box"><a href="http://"></a>Bambini</li>
+            <li class="flex-box"><a href="http://">Donna</a></li>
+            <li class="flex-box"><a href="http://">Uomo</a></li>
+            <li class="flex-box"><a href="http://">Bambini</a></li>
           </ul>
 
         </div>
@@ -46,6 +46,7 @@
         <div class="img-card-box flex-box">
           <div class="immagine">
             <img src="img/1.webp" alt="">
+            <img class="hidden" src="img/1b.webp" alt="">
             <div class="sconto flex-box">
               -50%
 
@@ -68,6 +69,7 @@
         <div class="img-card-box flex-box">
           <div class="immagine">
             <img src="img/2.webp" alt="">
+            <img class="hidden" src="img/2b.webp" alt="">
             <div class="sconto flex-box">
               -30%
 
@@ -90,6 +92,8 @@
         <div class="img-card-box flex-box">
           <div class="immagine">
             <img src="img/3.webp" alt="">
+            <img class="hidden" src="img/3b.webp" alt="">
+
             <div class="sconto flex-box">
               -30%
 
@@ -115,6 +119,8 @@
         <div class="img-card-box flex-box">
           <div class="immagine">
             <img src="img/4.webp" alt="">
+            <img class="hidden" src="img/4b.webp" alt="">
+
             <div class="sconto flex-box">
               -50%
 
@@ -137,6 +143,8 @@
         <div class="img-card-box flex-box">
           <div class="immagine">
             <img src="img/5.webp" alt="">
+            <img class="hidden" src="img/5b.webp" alt="">
+
             <!-- <div class="sconto flex-box">
               -30%
 
@@ -159,6 +167,8 @@
         <div class="img-card-box flex-box">
           <div class="immagine">
             <img src="img/6.webp" alt="">
+            <img class="hidden" src="img/6b.webp" alt="">
+
             <!-- <div class="sconto flex-box">
               -50%
 
