feat: modifiche su dettagli durante correzione
feat: eliminazione altezze fisse e aggiunta paddings

--- a/index.html
+++ b/index.html
@@ -206,9 +206,17 @@
 
       </div>
       <div class="social-media flex-box">
-        Trovaci anche su:
-
+        <div>
+          Trovaci anche su:
+        </div>
+        <div>
+          <a href="http://">Facebook</a>
+          <a href="http://">Twitter</a>
+          <a href="http://">Instagram</a>
+          <a href="http://">Youtube</a>
+        </div>
       </div>
+
     </div>
   </footer>
 </body>
