feat: <p> trasformati in divs
Più corretto a livello semantico

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     rel="stylesheet">
   <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 
 <body>
   <header>
@@ -60,9 +62,9 @@
             </div>
           </div>
           <div class="descrizione">
-            <p>Levi's</p>
-            <p><strong>RELAXED FIT TEE UNISEX</strong></p>
-            <p><span class="red">14,99 €</span> <span class="striked">29,99 €</span> </p>
+            <div>Levi's</div>
+            <div><strong>RELAXED FIT TEE UNISEX</strong></div>
+            <div><span class="red">14,99 €</span> <span class="striked">29,99 €</span> </div>
 
           </div>
         </div>
@@ -83,9 +85,9 @@
             </div>
           </div>
           <div class="descrizione">
-            <p>Guess</p>
-            <p><strong>ROSES TEE</strong></p>
-            <p><span class="red">20,99 €</span> <span class="striked">29,99 €</span> </p>
+            <div>Guess</div>
+            <div><strong>ROSES TEE</strong></div>
+            <div><span class="red">20,99 €</span> <span class="striked">29,99 €</span> </div>
 
           </div>
         </div>
@@ -107,9 +109,9 @@
             </div>
           </div>
           <div class="descrizione">
-            <p>Come Zucchero Filato</p>
-            <p><strong>VOGLIA DI COLORI PASTELLO</strong></p>
-            <p><span class="red">129,99 €</span> <span class="striked">184,99 €</span> </p>
+            <div>Come Zucchero Filato</div>
+            <div><strong>VOGLIA DI COLORI PASTELLO</strong></div>
+            <div><span class="red">129,99 €</span> <span class="striked">184,99 €</span> </div>
 
           </div>
         </div>
@@ -134,9 +136,9 @@
             </div>
           </div>
           <div class="descrizione">
-            <p>Levi's</p>
-            <p><strong>TEE UNISEX</strong></p>
-            <p><span class="red">14,99 €</span> <span class="striked">29,99 €</span> </p>
+            <div>Levi's</div>
+            <div><strong>TEE UNISEX</strong></div>
+            <div><span class="red">14,99 €</span> <span class="striked">29,99 €</span> </div>
 
           </div>
         </div>
@@ -158,9 +160,9 @@
             </div>
           </div>
           <div class="descrizione">
-            <p>Maya Deluxe</p>
-            <p><strong>STRIPE BODICE</strong></p>
-            <p><span class="red">99,99 €</span></p>
+            <div>Maya Deluxe</div>
+            <div><strong>STRIPE BODICE</strong></div>
+            <div><span class="red">99,99 €</span></div>
 
           </div>
         </div>
@@ -182,9 +184,9 @@
             </div>
           </div>
           <div class="descrizione">
-            <p>Esprit</p>
-            <p><strong>MAGLIONE - BLACK</strong></p>
-            <p><span class="red">129,99 €</span> <span class="striked">184,99 €</span> </p>
+            <div>Esprit</div>
+            <div><strong>MAGLIONE - BLACK</strong></div>
+            <div><span class="red">129,99 €</span> <span class="striked">184,99 €</span> </div>
 
           </div>
         </div>
@@ -219,6 +221,7 @@
 
     </div>
   </footer>
+
 </body>
 
 </html>
